fix: bug where content would leave white space when fully expanded. more dashboard edits

--- a/src/modules/global-header/style/global-header.scss
+++ b/src/modules/global-header/style/global-header.scss
@@ -8,7 +8,8 @@ $nav-border: #4d4d4d;
   color: $white;
   position: fixed;
   top: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 500;
   padding: 0.5rem 0;
   border-bottom: 4px solid darken($green, 18%);
